--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
+    <title>Snake | www.sergiosoriano.com</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
-<link rel="stylesheet" href="resources/css/style.css">
 <body>
     <canvas id="game"></canvas>
+    <a href="https://github.com/sergiss/snake" target="_blank"><i class="fa">&#xf09b;</i> Source Code </a>
     <script src="resources/js/script.js"></script>
 </body>
 
