add controllable snake speed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+    <div>
+        <input
+            type="range"
+            id="speed"
+            name="speed"
+            min="1"
+            max="10"
+            value="1">
+        <label for="speed">Speed</label>
+    </div>
+    <br>
     <canvas id="game"></canvas>
     <a href="https://github.com/sergiss/snake" target="_blank"><i class="fa">&#xf09b;</i> Source Code </a>
     <script src="resources/js/script.js"></script>
